src/objects/CSM_QI_View_Stat__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSM View Stats</relationshipLabel>
        <relationshipName>CSM_View_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>ArticleNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Creator_Email__c</fullName>
        <formula>Article_Creator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_View_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Reviewer_Email__c</fullName>
        <formula>Article_Reviewer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Reviewer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_View_Stats1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSM View Stats</relationshipLabel>
        <relationshipName>CSM_View_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>PRM-917: This field is used for showing record creation time in Reports section.</description>
        <formula>LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>ObjectApiName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pillar</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>ProductName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSH</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSM View Stat</label>
    <nameField>
        <displayFormat>VS-{0000000000}</displayFormat>
        <label>CSM View Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSM View Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>